--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,11 @@ allprojects {
     repositories {
         google()
         jcenter()
+        mavenLocal()
+        mavenCentral()
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
     }
 }
 
