--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,5 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile"org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    compile group: 'org.projectlombok', name: 'lombok-maven-plugin', version: '1.16.20.0'
 }
