--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,11 +27,11 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:26.1.0'
     compile 'com.android.support:design:26.1.0'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'com.android.support.constraint:constraint-layout:1.1.3'
     testCompile 'junit:junit:4.12'
     androidTestCompile('com.android.support.test.espresso:espresso-core:3.0.1', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile"org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    compile"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     compile group: 'org.projectlombok', name: 'lombok-maven-plugin', version: '1.16.20.0'
 }
